@@ -35,6 +35,7 @@ int  auth_mysql_init();
 /* These use SELECT statements defined in auth_mysql.c */
 authcontext auth_mysql_new_apop(const char *name, const char *timestamp, const unsigned char *digest, const char *host);
 authcontext auth_mysql_new_user_pass(const char *user, const char *pass, const char *host);
+void auth_mysql_onlogin(const authcontext A, const char *host);
 void auth_mysql_postfork();
 void auth_mysql_close();
 
