@@ -17,5 +17,6 @@ stringmap read_config_file(const char *f);
 int is_cfgdirective_valid(const char *s);
 int config_get_int(const char *directive, int *value);
 int config_get_float(const char *directive, float *value);
+char *config_get_string(const char *directive);
 
 #endif /* __CONFIG_H_ */
