@@ -24,6 +24,6 @@ auth-mysql-username:    vmail
 auth-mysql-password:    moocow
 
 auth-other-enable:      yes
-auth-other-program:     /home/chris/software/tpop3d/scripts/example
+auth-other-program:     /home/chris/software/tpop3d/scripts/relaydbm
 auth-other-user:        root
 auth-other-group:       root
